# Weekly-reporting-Telegram-bot

./: .replit  Haftalik_Rapor_14774.docx  Haftalik_Rapor_16945.docx  Haftalik_Rapor_18324.docx  Haftalik_Rapor_27830.docx  Haftalik_Rapor_28691.docx  Haftalik_Rapor_28805.docx  Haftalik_Rapor_31873.docx  Haftalik_Rapor_37975.docx  Haftalik_Rapor_54976.docx  Haftalik_Rapor_55621.docx  Haftalik_Rapor_57425.docx  Haftalik_Rapor_58379.docx  Haftalik_Rapor_59394.docx  Haftalik_Rapor_61012.docx  Haftalik_Rapor_62795.docx  Haftalik_Rapor_67744.docx  Haftalik_Rapor_67817.docx  Haftalik_Rapor_72149.docx  Haftalik_Rapor_72295.docx  Haftalik_Rapor_90642.docx  README.md  bot.py  docx_creator.py  drive_upload.py  gemini.py  haftalik_rapor_7417552764.docx  index.html  pyproject.toml  rapor_json_66820.json  rapor_json_84748.json  token.json
