[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.2.0",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.2.1",
    "telegram>=0.0.1",
    "google-auth-oauthlib>=1.2.2",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
]
